fix: update letter styles for improved readability

--- a/css/letter-css.css
+++ b/css/letter-css.css
@@ -1,11 +1,12 @@
 
 #letter {
+    color: #000;
     font: 1.5em 'EduAUVICWANTHand';
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    margin: 10px;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    letter-spacing: 0.45px;
 }
 
 .line {
